--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Top Ranks Plugin
+author=mattjrumble
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=A plugin to display the top ranked skills/bosses/activities of a player.
+tags=top,rank,ranks,ranked,ranking,hiscore,hiscores
+plugins=com.example.TopRanksPlugin
